UAR-1145: Initial work on testing